crates/ink/tests/ui/contract/fail/constructor-return-result-non-codec-error.stderr
error[E0277]: the trait bound `Result<Result<(), &contract::Error>, LangError>: Encode` is not satisfied
  --> tests/ui/contract/fail/constructor-return-result-non-codec-error.rs:13:9
   |
13 |         pub fn constructor() -> Result<Self, Error> {
   |         ^^^ the trait `Encode` is not implemented for `Result<Result<(), &contract::Error>, LangError>`
   |
   = help: the trait `Encode` is implemented for `Result<T, E>`
note: required by a bound in `return_value`
  --> $WORKSPACE/crates/env/src/api.rs
   |
   | pub fn return_value<R>(return_flags: ReturnFlags, return_value: &R) -> !
   |        ------------ required by a bound in this function
   | where
   |     R: scale::Encode,
   |        ^^^^^^^^^^^^^ required by this bound in `return_value`

error[E0277]: the trait bound `contract::Error: WrapperTypeDecode` is not satisfied
  --> tests/ui/contract/fail/constructor-return-result-non-codec-error.rs:13:9
   |
13 |         pub fn constructor() -> Result<Self, Error> {
   |         ^^^ the trait `WrapperTypeDecode` is not implemented for `contract::Error`
   |
   = help: the following other types implement trait `WrapperTypeDecode`:
             Box<T>
             sp_core::Bytes
             Rc<T>
             Arc<T>
   = note: required for `contract::Error` to implement `ink::parity_scale_codec::Decode`
   = note: required for `Result<ContractRef, contract::Error>` to implement `ConstructorReturnType<ContractRef>`
note: required by a bound in `CreateBuilder::<E, ContractRef, CodeHash, GasLimit, Endowment, Args, Salt, Unset<ReturnType<()>>>::returns`
  --> $WORKSPACE/crates/env/src/call/create_builder.rs
   |
   |     pub fn returns<R>(
   |            ------- required by a bound in this associated function
...
   |         R: ConstructorReturnType<ContractRef>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CreateBuilder::<E, ContractRef, CodeHash, GasLimit, Endowment, Args, Salt, Unset<ReturnType<()>>>::returns`

error[E0277]: the trait bound `contract::Error: TypeInfo` is not satisfied
 --> tests/ui/contract/fail/constructor-return-result-non-codec-error.rs:4:16
  |
4 |     pub struct Contract {}
  |                ^^^^^^^^ the trait `TypeInfo` is not implemented for `contract::Error`
  |
  = help: the following other types implement trait `TypeInfo`:
            bool
            char
            i8
            i16
            i32
            i64
            i128
            u8
          and $N others
  = note: required for `Result<(), contract::Error>` to implement `TypeInfo`
  = note: 1 redundant requirement hidden
  = note: required for `Result<Result<(), contract::Error>, LangError>` to implement `TypeInfo`
note: required by a bound in `TypeSpec::with_name_str`
 --> $WORKSPACE/crates/metadata/src/specs.rs
  |
  |     pub fn with_name_str<T>(display_name: &'static str) -> Self
  |            ------------- required by a bound in this associated function
  |     where
  |         T: TypeInfo + 'static,
  |            ^^^^^^^^ required by this bound in `TypeSpec::with_name_str`
